# k8sbackup

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
crds/: restorejob.yaml
k8sbackup/: controller.py
tests/: restore_stable.yaml
